--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body {
 }
 .card {
   margin: 0 0.5em;
-  box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+  box-shadow: 2px 6px 8px 0 black;
   border: none;
 }
 .carousel-control-prev,
